# fast_AUC

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: python-build.yaml  tests.yaml
src/fast_AUC/: __init__.py  fast_AUC.py
